# PrescriptionTracker

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3e731b0d3338_initial_schema.py
backend/app/: main.py  serve.py
backend/app/api/v1/endpoints/: api_keys.py  auth.py  lookups.py  medications.py  ops.py  prescriptions.py  users.py
backend/app/core/: config.py  deps.py  errors.py  security.py  tokens.py
backend/app/db/: session.py
backend/app/models/: __init__.py  audit_log.py  medication.py  prescription.py  refresh_token.py  user.py
backend/app/schemas/: auth.py  common.py  medication.py  prescription.py  user.py
backend/app/scripts/: create_admin.py
backend/app/services/: api_key_service.py  audit_service.py  auth_service.py  medication_service.py  prescription_service.py  user_service.py
backend/app/tests/: conftest.py  test_auth.py  test_medications.py  test_ops.py  test_prescriptions.py  test_users.py
backend/static/: index.html
backend/static/assets/: index-ClcJ8_6G.js  index-xSGGqASe.css
data load/: PrescriptionDatabase_2026-04-22.sql  data-try2.sql  data.sql  data1.sql  data2.sql  full_data.sql
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: AddPrescriptionModal.tsx  ApiKeyModal.tsx  App.css  App.tsx  ChangePasswordModal.tsx  Dashboard.tsx  EditMedicationModal.tsx  (+9 more)
mobile/: .gitignore  README.md  app.json  package-lock.json  package.json
planning/: PLAN.md  PLAN_REVIEW.md
(+11 files in other folders)
